[gd_scene load_steps=4 format=3 uid="uid://ewwvy7f1xvm1"]

[ext_resource type="Script" path="res://scripts/menus/video_settings.gd" id="1_5ixgh"]
[ext_resource type="FontFile" uid="uid://8fl7yecdpp08" path="res://fonts/Tiny5-Regular.ttf" id="1_lu682"]

[sub_resource type="LabelSettings" id="LabelSettings_0j45f"]
font = ExtResource("1_lu682")

[node name="video_canvas" type="MarginContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -84.0
offset_right = 66.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ixgh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="resolution" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "RESOLUTION:
640 x 360"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="integer_scaling" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "INTEGER SCALING:
ON
"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="full_screen" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FULL SCREEN:
OFF
"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="back_label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BACK

"
label_settings = SubResource("LabelSettings_0j45f")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
